style.css
body {
    font-family: monospace;
    margin: 0;
}

.header {
    background: #1f2937; 
    margin: 0;
    display: flex;
    align-items: center;
}

.logo {
    color: #f9faf8;
    font-size: 24px;
    font-weight: bold;
    display: flex;
    margin-left: 26px;
}

.links {
    color: #efe7eb;
    font-size: 18px;
    display: flex;
    gap: 18px;
    flex: 1;
    justify-content: center;
    justify-content: flex-end;
    margin-right: 26px;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

.top-page {
    background: #1f2937;
    display: flex;
    justify-content: center;
}

.tpleft {
    margin: 26px;

}

button {
    border: none;
    border-radius: 8px;
    padding: 8px 24px;
    font-weight: bold;
}

.right {
    display: flex;
    justify-content: flex-end;
}

.image {
    display: flex;
    
    width: 550px;
    height: 260px;
    align-items: center;
    justify-content: center;
    margin: 26px;
}

.main-title {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
    width: 450px;
    word-spacing: -10px;
}

.subtext {
    font-size: 18px;
    color: #f9faf8;
}

.sign-up {
    color: #f9faf8;
    background: #3882f6;
}

.image {
    font-size: 18px;
    color: #f9faf8;
    background-color: gray;
}

.information {
    text-align: center;
    height: 300px;
}

.info-header {
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
}

.container {
    display: flex;
    justify-content: center;
    gap: 52px;
    margin-top: 45px;
}

.info {
    max-width: 200px;
}

.illustration {
    border: 3px solid;
    border-radius: 8px;
    border-color: #3882f6;
    height: 140px;
    width: 140px;
    margin: auto;
}

.text {
    color: gray;
    font-size: 18px;
}

.quote-text {
    font-size: 36px;
    font-weight: lighter;
    color: #1f2937;
    background-color: #e5e7eb;
}

.modal {
    background-color: #3882f6;
}

.call {
    font-size: 22px;
    color: #f9faf8;
    font-weight: bold;
}

.sign {
    color: #f9faf8;
    background-color: #3882f6;
    border: 2px solid;
    border-color: #f9faf8;
}

